@@ -29,6 +29,16 @@ The jdk provided by [HotSwapHelper Releases](https://github.com/gejun123456/HotS
 dcevm with hotswap folder into it, so you don't need to install dcevm separately.
 If you don't like it, you can always install by yourself from doc:[HotSwapAgent GitHub page](https://github.com/HotswapProjects/HotswapAgent).
 
+#### java17 startUp issue java.nio.channels.ReadableByteChannel sun.nio.ch.ChannelInputStream.ch accessible: module java.base does not "opens sun.nio.ch" to unnamed module @8297b3a
+
+add vm parameters:
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED   
+--add-opens=java.base/java.lang=ALL-UNNAMED  
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED  
+--add-opens=java.base/java.io=ALL-UNNAMED  
+--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+plugin 1.0.1 version will fix the issue.  
+
 ### Encountering Issues?
 Just issue on github or contact me following:
 You can contact me by joining the QQ group: [HotSwapHelper Plugin User Group](https://qm.qq.com/q/JQKyhlt4ke)
